css/style-semantic.css
@page {
  size: A4;
  margin: 0;
}
@media print {
  html, body {
    width: 210mm;
    height: 297mm;
    margin: 0;
    padding: 0;
  }

  html > body {
  	margin: 2mm;
  	font-size: 8.9pt;
    font-family: Verdana;
    letter-spacing: normal;
  }

  img.tiny.rounded.profile-photo{
    max-width: 18mm;
  }

  h3.ui.medium.header {
    margin-bottom: 0.7em;
  }
  h2.ui.tiny.centered.header.punchline{
    /*font-family: 'Droid Sans Mono', monospace;*/
    font-family: Verdana;
    font-size: 0.8em;
  }
  /* Header */

  header {
    max-height: 10%;
  }
  header div.ui.middle.aligned.twelve {
    padding-top: 1%;
    margin: 0;
  }
  h2.ui.centered.header {
    margin-bottom: 2%;
  }

  h2.tiny.centered.header {
    font-size: 0.9em;
  }

  /*  Listes */

  ul {
  	margin: 0;
  	padding: 0;
  }
  div.ui.four.wide.segments .ui.segment {
    padding-left: 0;
    padding-right: 0;
  }

  ul.ui.list {
  	margin-left: 0;
  }

  .ui.segment.contact {
    font-size: 1.2em;
  }

  /* Projets */

  section.projets .list .item .content .description {
    font-size: 0.7em;
    font-family: Verdana;
  }

  section.projets a {
    color: #F26202;
  }

  /* Expériences */

  h4.header {
    font-size: 0.8em;
  }

  .two.wide.cards {
    font-size: 0.74em;
  }

  .ui.card.styled.accordion.master {
    font-size: 0.74em;

  }

  div .ui.card.second , div .ui.two.wide.cards.second {
    display: none;
  }

  /* Image Size */

  div.ui.mini.images img.brunch {
  	transform: scale(0.6);
  }

  /* Formation */
  div.ui.raised.card.simplon .content h4{
    margin-bottom: 0;
  }

  div.ui.raised.card.simplon .content {
    padding: 0.3em;
  }

  /* Cartes compétences */
  .ui.wide.cards > .ui.card {
  	padding: 0.4em;
  	line-height: 1.5em;
  }

  .ui.wide.cards .contenu, .ui.list > .item .description {
  	text-align: justify;
  }

  .ui.card.skills div.item, .ui.card.skills span,.ui.list.contenu > .item{
  	line-height: 1.5em;
  	font-size: 0.8em;
  }

  .ui.card .content.title {
  	max-height: 25%;
  }

  div.description {
  	line-height: 1.4em;
  }

  .ui.styled.fluid.accordion .title{
    font-size: 1.1em;
    padding: 0.8em;
    color: black;
  }


  /* Barre Verticale */

  .ui.four.wide.segments a,.ui.four.wide.segments .ui.large.list a.header {
  	color: #F26202;
  }

  .title {
  	font-size: 0.9em;
  	font-weight: bold;
  }

}

